--- a/index.html
+++ b/index.html
@@ -1,26 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Tip calculator app</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h2 class="titulo">
+      spli <br />
+      tter
+    </h2>
+    <div class="cartao">
+      <div class="cartao-container">
+        <div class="inputs-section">
+          <div class="bill-sec">
+            <label for="bill">Bill</label>
+            <div class="bill-input">
+              <input type="text" placeholder="0" id="bill" />
+              <img src="./images/icon-dollar.svg" alt="person" />
+            </div>
+          </div>
+          <div class="tip-sec">
+            <label for="tip">Select Tip %</label>
+            <div class="tip-botao">
+              <div>
+                <button>5%</button>
+                <button>10%</button>
+                <button>15%</button>
+              </div>
+              <div>
+                <button>25%</button>
+                <button>50%</button>
+                <input type="number" placeholder="Custom" id="custom"/>
+              </div>
+            </div>
+          </div>
+          <div class="people-sec">
+            <label for="people">Number of People</label>
+            <div class="people-input">
+              <input type="text" placeholder="0" id="people" />
+              <img src="./images/icon-person.svg" alt="person" />
+            </div>
+          </div>
+        </div>
+        <div class="direita-section">
+          <div class="tip-amount">
+            <p>Tip Amount<br /><span>/ person</span></p>
+            <h2 id="tipAmount">$0.00</h2>
+          </div>
+          <div class="total">
+            <p>Total<br /><span>/ person</span></p>
+            <h2 id="total">$0.00</h2>
+          </div>
+          <button class="reset-botao" id="resetBotao">Reset</button>
+        </div>
+      </div>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
