--- a/index.html
+++ b/index.html
@@ -1,68 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <title>Frontend Mentor | Tip calculator app</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="utf-8">
+    <title>Calculator App</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <h2 class="titulo">
-      spli <br />
-      tter
-    </h2>
-    <div class="cartao">
-      <div class="cartao-container">
-        <div class="inputs-section">
-          <div class="bill-sec">
-            <label for="bill">Bill</label>
-            <div class="bill-input">
-              <input type="text" placeholder="0" id="bill" />
-              <img src="./images/icon-dollar.svg" alt="person" />
-            </div>
-          </div>
-          <div class="tip-sec">
-            <label for="tip">Select Tip %</label>
-            <div class="tip-botao">
-              <div>
-                <button>5%</button>
-                <button>10%</button>
-                <button>15%</button>
-              </div>
-              <div>
-                <button>25%</button>
-                <button>50%</button>
-                <input type="number" placeholder="Custom" id="custom"/>
-              </div>
-            </div>
-          </div>
-          <div class="people-sec">
-            <label for="people">Number of People</label>
-            <div class="people-input">
-              <input type="text" placeholder="0" id="people" />
-              <img src="./images/icon-person.svg" alt="person" />
-            </div>
+    <div class="coantainer">
+      <div class="titulo">
+        <div class="mudar">
+          <h3>Calc</h3>
+          <div class="direita">
+            <p id="um">1</p>
+            <p id="dois">2</p>
+            <p id="tres">3</p>
           </div>
         </div>
-        <div class="direita-section">
-          <div class="tip-amount">
-            <p>Tip Amount<br /><span>/ person</span></p>
-            <h2 id="tipAmount">$0.00</h2>
+        <div class="controle">
+          <p>Theme</p>
+          <div class="box">
+            <div id="circulo"></div>
           </div>
-          <div class="total">
-            <p>Total<br /><span>/ person</span></p>
-            <h2 id="total">$0.00</h2>
-          </div>
-          <button class="reset-botao" id="resetBotao">Reset</button>
+        </div>
+      </div>
+      <div class="tela">
+        <form name="calc">
+          <input type="text" name="text" readonly id="telaID">
+        </form>
+      </div>
+      <div class="cal-body">
+        <div class="botao">
+          <button class="num" onclick="document.calc.text.value+='7'">7</button>
+          <button class="num" onclick="document.calc.text.value+='8'">8</button>
+          <button class="num" onclick="document.calc.text.value+='9'">9</button>
+          <button class="del" onclick="del()">DEL</button>
+          <button class="num" onclick="document.calc.text.value+='4'">4</button>
+          <button class="num" onclick="document.calc.text.value+='5'">5</button>
+          <button class="num" onclick="document.calc.text.value+='6'">6</button>
+          <button onclick="document.calc.text.value+='+'">+</button>
+          <button class="num" onclick="document.calc.text.value+='1'">1</button>
+          <button class="num" onclick="document.calc.text.value+='2'">2</button>
+          <button class="num" onclick="document.calc.text.value+='3'">3</button>
+          <button onclick="document.calc.text.value+='-'">-</button>
+          <button onclick="document.calc.text.value+='.'">.</button>
+          <button class="num" onclick="document.calc.text.value+='0'">0</button>
+          <button onclick="document.calc.text.value+='/'">/</button>
+          <button onclick="document.calc.text.value+='*'">X</button>
+          <button class="reset" onclick="document.calc.text.value=''">RESET</button>
+          <button class="igual" onclick="document.calc.text.value= eval(calc.text.value)">=</button>
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="calculator.js"></script>
   </body>
-</html>
+  </html>
