--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div class="coantainer">
+    <div class="container">
       <div class="titulo">
         <div class="mudar">
           <h3>Calc</h3>
