--- a/index.html
+++ b/index.html
@@ -5,53 +5,54 @@
     <title>Calculator App</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
-    <div class="container">
-      <div class="titulo">
-        <div class="mudar">
-          <h3>Calc</h3>
-          <div class="direita">
-            <p id="um">1</p>
-            <p id="dois">2</p>
-            <p id="tres">3</p>
-          </div>
-        </div>
-        <div class="controle">
-          <p>Theme</p>
-          <div class="box">
-            <div id="circulo"></div>
-          </div>
-        </div>
-      </div>
-      <div class="tela">
-        <form name="calc">
-          <input type="text" name="text" readonly id="telaID">
-        </form>
-      </div>
-      <div class="cal-body">
-        <div class="botao">
-          <button class="num" onclick="document.calc.text.value+='7'">7</button>
-          <button class="num" onclick="document.calc.text.value+='8'">8</button>
-          <button class="num" onclick="document.calc.text.value+='9'">9</button>
-          <button class="del" onclick="del()">DEL</button>
-          <button class="num" onclick="document.calc.text.value+='4'">4</button>
-          <button class="num" onclick="document.calc.text.value+='5'">5</button>
-          <button class="num" onclick="document.calc.text.value+='6'">6</button>
-          <button onclick="document.calc.text.value+='+'">+</button>
-          <button class="num" onclick="document.calc.text.value+='1'">1</button>
-          <button class="num" onclick="document.calc.text.value+='2'">2</button>
-          <button class="num" onclick="document.calc.text.value+='3'">3</button>
-          <button onclick="document.calc.text.value+='-'">-</button>
-          <button onclick="document.calc.text.value+='.'">.</button>
-          <button class="num" onclick="document.calc.text.value+='0'">0</button>
-          <button onclick="document.calc.text.value+='/'">/</button>
-          <button onclick="document.calc.text.value+='*'">X</button>
-          <button class="reset" onclick="document.calc.text.value=''">RESET</button>
-          <button class="igual" onclick="document.calc.text.value= eval(calc.text.value)">=</button>
-        </div>
-      </div>
-    </div>
-    <script src="calculator.js"></script>
-  </body>
-  </html>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div class="container">
+		<div class="titulo">
+			<div class="alternar">
+				<h3>Calc</h3>
+				<div class="direita">
+					<p id="um">1</p>
+					<p id="dois">2</p>
+					<p id="tres">3</p>
+				</div>
+			</div>
+			<div class="controle">
+				<p>Theme</p>
+				<div class="box">
+					<div id="circulo"></div>
+				</div>
+			</div>
+		</div>
+		<div class="tela">
+			<form name="calc">
+				<input type="text" name="text" readonly id="screen">
+			</form>
+		</div>
+		<div class="cal-body">
+			<div class="botao">
+				<button class="num" onclick="document.calc.text.value+='7'">7</button>
+				<button class="num" onclick="document.calc.text.value+='8'">8</button>
+				<button class="num" onclick="document.calc.text.value+='9'">9</button>
+				<button class="del" onclick="del()">DEL</button>
+				<button class="num" onclick="document.calc.text.value+='4'">4</button>
+				<button class="num" onclick="document.calc.text.value+='5'">5</button>
+				<button class="num" onclick="document.calc.text.value+='6'">6</button>
+				<button onclick="document.calc.text.value+='+'">+</button>
+				<button class="num" onclick="document.calc.text.value+='1'">1</button>
+				<button class="num" onclick="document.calc.text.value+='2'">2</button>
+				<button class="num" onclick="document.calc.text.value+='3'">3</button>
+				<button onclick="document.calc.text.value+='-'">-</button>
+				<button onclick="document.calc.text.value+='.'">.</button>
+				<button class="num" onclick="document.calc.text.value+='0'">0</button>
+				<button onclick="document.calc.text.value+='/'">/</button>
+				<button onclick="document.calc.text.value+='*'">X</button>
+				<button class="reset" onclick="document.calc.text.value=''">RESET</button>
+				<button class="equal" onclick="document.calc.text.value= eval(calc.text.value)">=</button>
+			</div>
+		</div>
+	</div>
+	<script src="main.js"></script>
+</body>
+</html>
